Atualização do POrtal do secretário

--- a/src/login-secretario/a.html
+++ b/src/login-secretario/a.html
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Main Content Section -->
-    <div class="height-100 bg-light">
+    <div class="height-100">
         <h4>Relatórios</h4>
     </div>
 </body>
