--- a/src/login-secretario/alocação-usuarios.html
+++ b/src/login-secretario/alocação-usuarios.html
@@ -58,8 +58,11 @@
     </div>
 
     <!-- Main Content Section -->
-    <div class="height-100 bg-light">
+    <div class="height-100">
         <h4>Alocação</h4>
+        <br>
+
+
     </div>
 </body>
 
