--- a/src/login-secretario/gestão-usuario.html
+++ b/src/login-secretario/gestão-usuario.html
@@ -124,7 +124,7 @@
         </div>
 
         <!-- Main Content Section -->
-        <div class="height-100 bg-light">
+        <div class="height-100">
             <h4>Gestão de Usuários</h4>
             <br>
             <div class="container">
@@ -132,7 +132,7 @@
                     <div class="col-2">
                         <input type="text" class="form-control" id="" placeholder="Matrícula">
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <input type="text" class="form-control" id="" placeholder="Nome">
                     </div>
                     <div class="col-2">
@@ -146,16 +146,17 @@
                             <option value="0">Secretário</option>
                         </select>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <button id="btn_add" type="button" class="btn btn-primary">
                             Pesquisar
                         </button>
                         <button id="btn_unfilter" type="button" class="btn btn-secondary">Limpar busca</button>
+                        <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Novo Registro</button>
                     </div>
                 </div>
                 <br>
                 <!--Tabela de Usuarios-->
-                <table class="table">
+                <table class="table table-striped">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
@@ -362,20 +363,31 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="row">
-                    <div class="col-10"></div>
-                    <div class="col-2">
-                        <button id="btn_add" type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#cadastro-usuario">
-                        Novo registro
-                    </button>
-                    </div>
-    
-                </div>
+                <div aria-label="Page navigation example justify-content-center">
+                    <ul class="pagination">
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
             </div>
         </div>  
     </section>
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
