Atualização POrtal Secretario

--- a/src/login-secretario/gestão-usuario.html
+++ b/src/login-secretario/gestão-usuario.html
@@ -43,7 +43,7 @@
                     <form class="row g-3">
                         <div class="col-3">
                             <label for="inputAddress" class="form-label">Matrícula</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="">
+                            <input type="text" class="form-control" id="inputAddress" placeholder="0001" disabled>
                         </div>
                         <div class="col-9">
                             <label for="inputAddress" class="form-label">Nome</label>
@@ -65,9 +65,13 @@
                         <label for="inputEmail4" class="form-label">Email</label>
                         <input type="email" class="form-control" id="inputEmail4">
                         </div>
-                        <div class="col-12">
-                        <label for="inputAddress" class="form-label">Endereço</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="">
+                        <div class="col-8">
+                            <label for="inputAddress" class="form-label">Endereço</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="">
+                        </div>
+                        <div class="col-4">
+                            <label for="inputAddress" class="form-label">Senha</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="">
                         </div>
                     </form>
                 </div>
@@ -83,7 +87,7 @@
         <div class="l-navbar">
             <nav class="nav">
                 <div>
-                    <a href="#" class="nav_logo">
+                    <a href="Index.html" class="nav_logo">
                         <i class='bx bx-layer nav_logo-icon'></i>
                         <span class="nav_logo-name">Secretário</span>
                     </a>
@@ -102,9 +106,8 @@
                         <a href="alocação-usuarios.html" class="nav_link">
                             <i class='bx bx-bookmark nav_icon'></i>
                             <span class="nav_name">Alocação de Usuários</span>
-                        
                         </a>
-                        <a href="a.html" class="nav_link">
+                        <a href="relatorios.html" class="nav_link">
                             <i class='bx bx-grid-alt nav_icon'></i>
                             <span class="nav_name">Relátorios</span>
                         </a>
@@ -116,7 +119,7 @@
                 </div>
 
                 <!-- Sign Out Link -->
-                <a href="#" class="nav_link">
+                <a href="/src/index.html" class="nav_link">
                     <i class='bx bx-log-out nav_icon'></i>
                     <span class="nav_name">Sair</span>
                 </a>
