--- a/src/login-secretario/relatorios.html
+++ b/src/login-secretario/relatorios.html
@@ -58,7 +58,30 @@
 
     <!-- Main Content Section -->
     <div class="height-100">
-        <h4>Caléndario</h4>
+        <h4>Relatórios</h4>
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-3 bg-success">
+                <h5>Notas</h5>
+
+                    <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+
+                </div>
+                <div class="col-3 bg-warning">
+                    <h5>Frequência</h5>
+                    <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                </div>
+                <div class="col-3 bg-success">
+                    <h5>Histórico escolar</h5>
+                    <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                </div>
+                <div class="col-3 bg-warning">
+                    <h5>Relação de professores</h5>
+                    <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
