--- a/src/login-secretario/Index.html
+++ b/src/login-secretario/Index.html
@@ -17,7 +17,7 @@
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="#" class="nav_logo">
+                <a href="Index.html" class="nav_logo">
                     <i class='bx bx-layer nav_logo-icon'></i>
                     <span class="nav_logo-name">Secretário</span>
                 </a>
@@ -36,9 +36,8 @@
                     <a href="alocação-usuarios.html" class="nav_link">
                         <i class='bx bx-bookmark nav_icon'></i>
                         <span class="nav_name">Alocação de Usuários</span>
-                    
                     </a>
-                    <a href="a.html" class="nav_link">
+                    <a href="relatorios.html" class="nav_link">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Relátorios</span>
                     </a>
@@ -50,7 +49,7 @@
             </div>
 
             <!-- Sign Out Link -->
-            <a href="#" class="nav_link">
+            <a href="/src/index.html" class="nav_link">
                 <i class='bx bx-log-out nav_icon'></i>
                 <span class="nav_name">Sair</span>
             </a>
@@ -58,9 +57,12 @@
     </div>
 
     <!-- Main Content Section -->
-    <div class="height-100">
-        <h4>Relatórios</h4>
+    <div class="container height-100 d-flex flex-column justify-content-center align-items-center text-center">
+        <h1>Seja Bem-Vindo, User12345</h1>
+        <p class="motivational-quote">"Frase Motivacional"</p>
+        <br>
     </div>
+    
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
