--- a/src/login-secretario/alocação-usuarios.html
+++ b/src/login-secretario/alocação-usuarios.html
@@ -9,64 +9,349 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="assets/index.css">
-    <script src="assets/index.js"></script>
 </head>
-
+</head>
 <body id="body-pd">
-    <!-- Navbar Section -->
-    <div class="l-navbar" id="nav-bar">
-        <nav class="nav">
-            <div>
-                <a href="#" class="nav_logo">
-                    <i class='bx bx-layer nav_logo-icon'></i>
-                    <span class="nav_logo-name">Secretário</span>
-                </a>
-
-                <!-- Navigation Links -->
-                <div class="nav_list">
-
-                    <a href="gestão-usuario.html" class="nav_link">
-                        <i class='bx bx-user nav_icon'></i>
-                        <span class="nav_name">Gestão de Usuários</span>
-                    </a>
-                    <a href="gestão-cursos.html" class="nav_link">
-                        <i class='bx bx-message-square-detail nav_icon'></i>
-                        <span class="nav_name">Gestão de Cursos</span>
-                    </a>
-                    <a href="alocação-usuarios.html" class="nav_link">
-                        <i class='bx bx-bookmark nav_icon'></i>
-                        <span class="nav_name">Alocação de Usuários</span>
-                    
-                    </a>
-                    <a href="a.html" class="nav_link">
-                        <i class='bx bx-grid-alt nav_icon'></i>
-                        <span class="nav_name">Relátorios</span>
-                    </a>
-                    <a href="calendario.html" class="nav_link">
-                        <i class='bx bx-folder nav_icon'></i>
-                        <span class="nav_name">Caléndario</span>
-                    </a>
+    <!--Modal de confirmação-->
+    <div class="modal fade" id="confirma-exclusao">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title">Excluir usuário</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                <p>Confirma exclusão do usuário?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary">Confirmar</button>
                 </div>
             </div>
-
-            <!-- Sign Out Link -->
-            <a href="#" class="nav_link">
-                <i class='bx bx-log-out nav_icon'></i>
-                <span class="nav_name">Sair</span>
-            </a>
-        </nav>
+        </div>
     </div>
 
-    <!-- Main Content Section -->
-    <div class="height-100">
-        <h4>Alocação</h4>
-        <br>
-
-
+    <!--Modal de Alocação de Usuário-->
+    <div class="modal fade" id="alocacao-usuario">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title">Alocação de usuário</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="row g-3">
+                        <div class="col-3">
+                            <label for="inputAddress" class="form-label">Matrícula</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="######" disabled>
+                        </div>
+                        <div class="col-9">
+                            <label for="inputAddress" class="form-label">Nome</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="Joseph Clinber" disabled>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                              Direito
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                              Direito
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                              Direito
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                              Direito
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                              Direito
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                              Direito
+                            </label>
+                        </div>
+                        
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Salvar</button>
+                </div>
+            </div>
+        </div>
     </div>
-</body>
+    <section>
+        <!-- Navbar Section -->
+        <div class="l-navbar">
+            <nav class="nav">
+                <div>
+                    <a href="Index.html" class="nav_logo">
+                        <i class='bx bx-layer nav_logo-icon'></i>
+                        <span class="nav_logo-name">Secretário</span>
+                    </a>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+                    <!-- Navigation Links -->
+                    <div class="nav_list">
+
+                        <a href="gestão-usuario.html" class="nav_link">
+                            <i class='bx bx-user nav_icon'></i>
+                            <span class="nav_name">Gestão de Usuários</span>
+                        </a>
+                        <a href="gestão-cursos.html" class="nav_link">
+                            <i class='bx bx-message-square-detail nav_icon'></i>
+                            <span class="nav_name">Gestão de Cursos</span>
+                        </a>
+                        <a href="alocação-usuarios.html" class="nav_link">
+                            <i class='bx bx-bookmark nav_icon'></i>
+                            <span class="nav_name">Alocação de Usuários</span>
+                        </a>
+                        <a href="relatorios.html" class="nav_link">
+                            <i class='bx bx-grid-alt nav_icon'></i>
+                            <span class="nav_name">Relátorios</span>
+                        </a>
+                        <a href="calendario.html" class="nav_link">
+                            <i class='bx bx-folder nav_icon'></i>
+                            <span class="nav_name">Caléndario</span>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Sign Out Link -->
+                <a href="/src/index.html" class="nav_link">
+                    <i class='bx bx-log-out nav_icon'></i>
+                    <span class="nav_name">Sair</span>
+                </a>
+            </nav>
+        </div>
+
+        <!-- Main Content Section -->
+        <div class="height-100">
+            <h4>Gestão de Usuários</h4>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div class="col-2">
+                        <input type="text" class="form-control" id="" placeholder="Matrícula">
+                    </div>
+                    <div class="col-3">
+                        <input type="text" class="form-control" id="" placeholder="Nome">
+                    </div>
+                    <div class="col-2">
+                        <input type="text" class="form-control" id="" placeholder="Cpf">
+                    </div>
+                    <div class="col-2">
+                        <select class="form-select" id="" aria-label="">
+                            <option value="" selected>Todos</option>
+                            <option value="2">Alunos</option>
+                            <option value="1">Professores</option>
+                            <option value="0">Secretário</option>
+                        </select>
+                    </div>
+                    <div class="col-3">
+                        <button id="btn_add" type="button" class="btn btn-primary">
+                            Pesquisar
+                        </button>
+                        <button id="btn_unfilter" type="button" class="btn btn-secondary">Limpar busca</button>
+                    </div>
+                </div>
+                <br>
+                <!--Tabela de Usuarios-->
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Matrícula</th>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Cpf</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Endereço</th>
+                            <th scope="col">Tipo</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody class="table-group-divider">
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>202101</td>
+                            <td>Mark Otto</td>
+                            <td>111.222.333-44</td>
+                            <td>mark.otto@email.com</td>
+                            <td>Rua Alpha, 123</td>
+                            <td>Professor</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>202102</td>
+                            <td>Jacob Thornton</td>
+                            <td>222.333.444-55</td>
+                            <td>jacob.thornton@email.com</td>
+                            <td>Avenida Beta, 456</td>
+                            <td>Secretário</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>202103</td>
+                            <td>Larry Bird</td>
+                            <td>333.444.555-66</td>
+                            <td>larry.bird@email.com</td>
+                            <td>Rua Gamma, 789</td>
+                            <td>Aluno</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>202104</td>
+                            <td>Ana Silva</td>
+                            <td>444.555.666-77</td>
+                            <td>ana.silva@email.com</td>
+                            <td>Travessa Delta, 101</td>
+                            <td>Aluno</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td>202105</td>
+                            <td>João Souza</td>
+                            <td>555.666.777-88</td>
+                            <td>joao.souza@email.com</td>
+                            <td>Avenida Epsilon, 202</td>
+                            <td>Aluno</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">6</th>
+                            <td>202106</td>
+                            <td>Maria Oliveira</td>
+                            <td>666.777.888-99</td>
+                            <td>maria.oliveira@email.com</td>
+                            <td>Rua Zeta, 303</td>
+                            <td>Aluno</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">7</th>
+                            <td>202107</td>
+                            <td>Pedro Lima</td>
+                            <td>777.888.999-00</td>
+                            <td>pedro.lima@email.com</td>
+                            <td>Praça Eta, 404</td>
+                            <td>Aluno</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">8</th>
+                            <td>202108</td>
+                            <td>Luana Costa</td>
+                            <td>888.999.000-11</td>
+                            <td>luana.costa@email.com</td>
+                            <td>Alameda Theta, 505</td>
+                            <td>Aluno</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">9</th>
+                            <td>202109</td>
+                            <td>Renato Almeida</td>
+                            <td>999.000.111-22</td>
+                            <td>renato.almeida@email.com</td>
+                            <td>Rua Iota, 606</td>
+                            <td>Aluno</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">10</th>
+                            <td>202110</td>
+                            <td>Sofia Pereira</td>
+                            <td>000.111.222-33</td>
+                            <td>sofia.pereira@email.com</td>
+                            <td>Vila Kappa, 707</td>
+                            <td>Aluno</td>
+                            <td>
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#alocacao-usuario">
+                                    Alocar Usuário
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div aria-label="Page navigation example justify-content-center">
+                    <ul class="pagination">
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+            </div>
+        </div>  
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
