--- a/src/login-professor/relatorios.html
+++ b/src/login-professor/relatorios.html
@@ -3,9 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portal Secretário</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="assets/professor.css">
+    <script src="assets/index.js"></script>
 </head>
-<body>
-    
+
+<body id="body-pd">
+       <!-- Navbar Section -->
+       <div class="l-navbar" id="nav-bar">
+        <nav class="nav">
+            <div>
+                <a href="Index.html" class="nav_logo">
+                    <i class='bx bx-chalkboard nav_logo-icon'></i>
+                    <span class="nav_logo-name">Professor</span>
+                </a>
+
+                <!-- Navigation Links -->
+                <div class="nav_list">
+
+                    <a href="painel-controle.html" class="nav_link">
+                        <i class='bx bx-group nav_icon'></i>
+                        <span class="nav_name">Painel de Controle</span>
+                    </a>
+                    <a href="atividades.html" class="nav_link">
+                        <i class='bx bx-book nav_icon'></i>
+                        <span class="nav_name">Atividades</span>
+                    </a>
+                    <a href="chamada.html" class="nav_link">
+                        <i class='bx bx-edit nav_icon'></i>
+                        <span class="nav_name">Controle de Presença</span>
+                    </a>
+                    <a href="relatorios.html" class="nav_link">
+                        <i class='bx bx-bar-chart-alt nav_icon'></i>
+                        <span class="nav_name">Relatórios</span>
+                    </a>
+                    <a href="calendario.html" class="nav_link">
+                        <i class='bx bx-calendar nav_icon'></i>
+                        <span class="nav_name">Calendário Acadêmico</span>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Sign Out Link -->
+            <a href="/src/index.html" class="nav_link">
+                <i class='bx bx-log-out nav_icon'></i>
+                <span class="nav_name">Sair</span>
+            </a>
+        </nav>
+    </div>
+
+    <!-- Main Content Section -->
+    <div class="height-100">
+        <h4>Relatórios</h4>
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-3 bg-success">
+                <h5>Notas</h5>
+                    <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                </div>
+                <div class="col-3 bg-warning">
+                    <h5>Frequência</h5>
+                    <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+
 </html>
