Finalizado Front end

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
             <div class="card-body">
               <h5 class="card-title">Bolsas de Estudo</h5>
               <p class="card-text">Conheça as oportunidades de bolsas de estudo oferecidas para este semestre.</p>
-              <a href="#" class="btn btn-primary">Saiba Mais</a>
+              <a href="Saiba mais cursos.html" class="btn btn-primary">Saiba Mais</a>
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
             <div class="card-body">
               <h5 class="card-title">Eventos Acadêmicos</h5>
               <p class="card-text">Fique por dentro dos próximos eventos acadêmicos e palestras da faculdade.</p>
-              <a href="#" class="btn btn-primary">Saiba Mais</a>
+              <a href="Saiba mais eventos academicos.html" class="btn btn-primary">Saiba Mais</a>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
             <div class="card-body">
               <h5 class="card-title">Últimas Notícias</h5>
               <p class="card-text">Veja as últimas notícias da nossa comunidade acadêmica e conquistas de alunos.</p>
-              <a href="#" class="btn btn-primary">Saiba Mais</a>
+              <a href="Saiba mais noticias.html" class="btn btn-primary">Saiba Mais</a>
             </div>
           </div>
         </div>
