--- a/src/login-professor/index.html
+++ b/src/login-professor/index.html
@@ -43,10 +43,6 @@
                         <i class='bx bx-bar-chart-alt nav_icon'></i>
                         <span class="nav_name">Relatórios</span>
                     </a>
-                    <a href="calendario.html" class="nav_link">
-                        <i class='bx bx-calendar nav_icon'></i>
-                        <span class="nav_name">Calendário Acadêmico</span>
-                    </a>
                 </div>
             </div>
 
@@ -60,6 +56,10 @@
 
     <!-- Main Content Section -->
     <div class="container height-100 d-flex flex-column justify-content-center align-items-center text-center">
+        <div class="h-10">
+            <img src="https://static.vecteezy.com/ti/vetor-gratis/p1/15668053-modelo-de-design-de-logotipo-da-faculdade-ilustracaoial-logotipo-da-faculdade-da-universidade-distintivos-emblemas-sinais-estoque-logotipo-do-campus-da-faculdade-gratis-vetor.jpg" 
+            alt="Logo da UNIBH" class="login-logo" style="width: 200px;">
+        </div>
         <h1>Seja Bem-Vindo, User12345</h1>
         <p class="motivational-quote">"Frase Motivacional"</p>
         <br>
