--- a/src/login-aluno/index.html
+++ b/src/login-aluno/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Secretário</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Portal Professor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="assets/index.css">
+    <link rel="stylesheet" href="assets/professor.css">
     <script src="assets/index.js"></script>
 </head>
 
@@ -18,23 +20,24 @@
         <nav class="nav">
             <div>
                 <a href="Index.html" class="nav_logo">
-                    <i class='bx bx-layer nav_logo-icon'></i>
+                    <i class='bx bx-chalkboard nav_logo-icon'></i>
                     <span class="nav_logo-name">Aluno</span>
                 </a>
 
                 <!-- Navigation Links -->
                 <div class="nav_list">
-                    <a href="materias.html" class="nav_link">
-                        <i class='bx bx-message-square-detail nav_icon'></i>
-                        <span class="nav_name">Matérias</span>
+
+                    <a href="painel-controle.html" class="nav_link">
+                        <i class='bx bx-group nav_icon'></i>
+                        <span class="nav_name">Painel de Controle</span>
+                    </a>
+                    <a href="atividades.html" class="nav_link">
+                        <i class='bx bx-book nav_icon'></i>
+                        <span class="nav_name">Atividades</span>
                     </a>
                     <a href="relatorios.html" class="nav_link">
-                        <i class='bx bx-grid-alt nav_icon'></i>
-                        <span class="nav_name">Relátorios</span>
-                    </a>
-                    <a href="calendario.html" class="nav_link">
-                        <i class='bx bx-folder nav_icon'></i>
-                        <span class="nav_name">Caléndario</span>
+                        <i class='bx bx-bar-chart-alt nav_icon'></i>
+                        <span class="nav_name">Relatórios</span>
                     </a>
                 </div>
             </div>
@@ -49,6 +52,10 @@
 
     <!-- Main Content Section -->
     <div class="container height-100 d-flex flex-column justify-content-center align-items-center text-center">
+        <div class="h-10">
+            <img src="https://static.vecteezy.com/ti/vetor-gratis/p1/15668053-modelo-de-design-de-logotipo-da-faculdade-ilustracaoial-logotipo-da-faculdade-da-universidade-distintivos-emblemas-sinais-estoque-logotipo-do-campus-da-faculdade-gratis-vetor.jpg" 
+            alt="Logo da UNIBH" class="login-logo" style="width: 200px;">
+        </div>
         <h1>Seja Bem-Vindo, User12345</h1>
         <p class="motivational-quote">"Frase Motivacional"</p>
         <br>
