--- a/src/login-professor/relatorios.html
+++ b/src/login-professor/relatorios.html
@@ -41,10 +41,6 @@
                         <i class='bx bx-bar-chart-alt nav_icon'></i>
                         <span class="nav_name">Relatórios</span>
                     </a>
-                    <a href="calendario.html" class="nav_link">
-                        <i class='bx bx-calendar nav_icon'></i>
-                        <span class="nav_name">Calendário Acadêmico</span>
-                    </a>
                 </div>
             </div>
 
@@ -62,15 +58,41 @@
         <br>
         <div class="container">
             <div class="row">
-                <div class="col-3 bg-success">
-                <h5>Notas</h5>
-                    <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                <div class="col-6">
+                    <select class="form-select form-select-md mb-3" aria-label="Large select example">
+                        <option selected>Selecione o curso</option>
+                        <option value="1">TI</option>
+                        <option value="2">ADS</option>
+                        <option value="3">SI</option>
+                    </select>
                 </div>
-                <div class="col-3 bg-warning">
-                    <h5>Frequência</h5>
-                    <button id="btn_unfilter" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                <div class="col-6">
+                    <select class="form-select form-select-md" aria-label="Small select example">
+                        <option selected>Selecione a disciplina</option>
+                        <option value="1">NOSQL</option>
+                        <option value="2">TIDAI</option>
+                        <option value="3">FRONTEND</option>
+                    </select>
                 </div>
             </div>
+            
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-3 mb-4">
+                    <div class="p-3 bg-primary text-white rounded">
+                        <h5>Notas</h5>
+                        <button id="btn_notas" type="button" class="btn btn-light w-100" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                    </div>
+                </div>
+                <div class="col-3 mb-4">
+                    <div class="p-3 bg-primary text-white rounded">
+                        <h5>Frequência</h5>
+                        <button id="btn_frequencia" type="button" class="btn btn-light w-100" data-bs-toggle="modal" data-bs-target="#cadastro-usuario">Gerar Relatório</button>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 </body>
