--- a/src/login-secretario/Index.html
+++ b/src/login-secretario/Index.html
@@ -33,17 +33,9 @@
                         <i class='bx bx-message-square-detail nav_icon'></i>
                         <span class="nav_name">Gestão de Cursos</span>
                     </a>
-                    <a href="alocação-usuarios.html" class="nav_link">
-                        <i class='bx bx-bookmark nav_icon'></i>
-                        <span class="nav_name">Alocação de Usuários</span>
-                    </a>
                     <a href="relatorios.html" class="nav_link">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Relátorios</span>
-                    </a>
-                    <a href="calendario.html" class="nav_link">
-                        <i class='bx bx-folder nav_icon'></i>
-                        <span class="nav_name">Caléndario</span>
                     </a>
                 </div>
             </div>
@@ -58,10 +50,15 @@
 
     <!-- Main Content Section -->
     <div class="container height-100 d-flex flex-column justify-content-center align-items-center text-center">
+        <div class="h-10">
+            <img src="https://static.vecteezy.com/ti/vetor-gratis/p1/15668053-modelo-de-design-de-logotipo-da-faculdade-ilustracaoial-logotipo-da-faculdade-da-universidade-distintivos-emblemas-sinais-estoque-logotipo-do-campus-da-faculdade-gratis-vetor.jpg" 
+            alt="Logo da UNIBH" class="login-logo" style="width: 200px;">
+        </div>
         <h1>Seja Bem-Vindo, User12345</h1>
         <p class="motivational-quote">"Frase Motivacional"</p>
         <br>
     </div>
+    
     
 </body>
 
